--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@trpc/next": "^10.45.1",
     "@trpc/react-query": "^10.45.1",
     "@trpc/server": "^10.45.1",
+    "@vercel/blob": "^0.22.1",
+    "@web-std/file": "^3.0.3",
     "clsx": "^2.0.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
@@ -25,6 +27,7 @@
     "react-dom": "^18",
     "socis-components": "^0.0.107",
     "tailwind-merge": "^2.1.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -33,6 +36,7 @@
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.4.17",
