--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ NEXTAUTH_SECRET="" # openssl rand -base64 32
 DATABASE_URL="postgres://postgres.[project]:[password]@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
 # Direct connection to the database. Used for migrations.
 DATABASE_DIRECT_URL="postgres://postgres.[project]:[password]@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
+BLOB_READ_WRITE_TOKEN=""
 
 # Domain config
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
